complete first card with all features

--- a/index.html
+++ b/index.html
@@ -47,6 +47,58 @@
     </header>
     <!-- /#site_header -->
 
+    <main id="site_main">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card-1">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                        <div class="discount"><span class="off">-50%</span></div>
+                        <div class="green"><span>Sostenibilità</span></div>
+                        <div class="img-1b">
+                            <img src="./img-boolando/1b.webp" alt="">
+                        </div>
+                        <div class="img-1">
+                            <img src="./img-boolando/1.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="prod-info d-flex">
+                        <span class="p-brand">Levi's</span>
+                        <span class="p-name">RELAXED FIT TEE UNISEX</span>
+                        <div class="price">
+                            <span class="p-price">14,99€</span>
+                            <del>29,99€</del>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <img src="./img-boolando/2.webp" alt="">
+                    <span class="p-brand">Guess</span>
+                </div>
+                <div class="col-4">
+                    <img src="./img-boolando/3.webp" alt="">
+                    <span class="p-brand">Come Zucchero Filato</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <img src="./img-boolando/4.webp" alt="">
+                </div>
+                <div class="col-4">
+                    <img src="./img-boolando/5.webp" alt="">
+                </div>
+                <div class="col-4">
+                    <img src="./img-boolando/6.webp" alt="">
+                </div>
+            </div>
+        </div>
+
+    </main>
+    <!-- /#site_main -->
+
 
 </body>
 
