complete 2nd card

--- a/index.html
+++ b/index.html
@@ -72,8 +72,24 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <img src="./img-boolando/2.webp" alt="">
-                    <span class="p-brand">Guess</span>
+                    <div class="card-2">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                        <div class="discount"><span class="off">-30%</span></div>
+                        <div class="img-2b">
+                            <img src="./img-boolando/2b.webp" alt="">
+                        </div>
+                        <div class="img-2">
+                            <img src="./img-boolando/2.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="prod-info d-flex">
+                        <span class="p-brand">Guess</span>
+                        <span class="p-name">ROSES TEE</span>
+                        <div class="price">
+                            <span class="p-price">20,99€</span>
+                            <del>29,99€</del>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-4">
                     <img src="./img-boolando/3.webp" alt="">
