complete first row of products

--- a/index.html
+++ b/index.html
@@ -92,8 +92,24 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <img src="./img-boolando/3.webp" alt="">
-                    <span class="p-brand">Come Zucchero Filato</span>
+                    <div class="card-3">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                        <div class="discount"><span class="off">-30%</span></div>
+                        <div class="img-3b">
+                            <img src="./img-boolando/3b.webp" alt="">
+                        </div>
+                        <div class="img-3">
+                            <img src="./img-boolando/3.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="prod-info d-flex">
+                        <span class="p-brand">Come Zucchero Filato</span>
+                        <span class="p-name">VOGLIA DI COLORI PASTELLO</span>
+                        <div class="price">
+                            <span class="p-price">129,99€</span>
+                            <del>184,99€</del>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
