--- a/index.html
+++ b/index.html
@@ -117,7 +117,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-4">
-                    <img src="./img-boolando/4.webp" alt="">
+                    <div class="card-4">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                        <div class="discount"><span class="off">-50%</span></div>
+                        <div class="green"><span>Sostenibilità</span></div>
+                        <div class="img-4b">
+                            <img src="./img-boolando/4b.webp" alt="">
+                        </div>
+                        <div class="img-4">
+                            <img src="./img-boolando/4.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="prod-info d-flex">
+                        <span class="p-brand">Levi's</span>
+                        <span class="p-name">TEE UNISEX</span>
+                        <div class="price">
+                            <span class="p-price">14,99€</span>
+                            <del>29,99€</del>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-4">
                     <img src="./img-boolando/5.webp" alt="">
