complete 2nd row add 6th card product

--- a/index.html
+++ b/index.html
@@ -157,7 +157,23 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <img src="./img-boolando/6.webp" alt="">
+                    <div class="card-6">
+                        <div class="heart"><i class="fa-solid fa-heart"></i></div>
+                        <div class="green6"><span>Sostenibilità</span></div>
+                        <div class="img-6b">
+                            <img src="./img-boolando/6b.webp" alt="">
+                        </div>
+                        <div class="img-6">
+                            <img src="./img-boolando/6.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="prod-info d-flex">
+                        <span class="p-brand">Esprit</span>
+                        <span class="p-name">MAGLIONE - BLACK</span>
+                        <div class="price">
+                            <span class="p-price">29,99€</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
