add site footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main id="site_main">
         <div class="container">
-            <div class="row">
+            <div class="row-1">
                 <div class="col-4">
                     <div class="card-1">
                         <div class="heart"><i class="fa-solid fa-heart"></i></div>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="container">
-            <div class="row">
+            <div class="row-2">
                 <div class="col-4">
                     <div class="card-4">
                         <div class="heart"><i class="fa-solid fa-heart"></i></div>
@@ -181,6 +181,35 @@
     </main>
     <!-- /#site_main -->
 
+    <footer id="site_footer">
+
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col-6">
+                    <span><strong>Boolando S.r.l</strong></span>
+                    <div class="info">
+                        <a href="#">Informazioni legali</a>
+                        <a href="">Informativa sulla privacy</a>
+                        <a href="#">Diritto di recesso</a>
+                    </div>
+                </div>
+                <div class="col-6 d-flex">
+                    <span><strong>Trovaci anche su</strong>
+                        <div class="socials d-flex">
+                            <i class="fa-brands fa-square-twitter"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-square-instagram"></i>
+                            <i class="fa-brands fa-square-pinterest"></i>
+                            <i class="fa-brands fa-square-youtube"></i>
+                        </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </footer>
+    <!-- /#site_footer -->
 
 </body>
 
